# serializer version: 1
# name: test_device_html
  Device(
    firmware='ME_08_0102_2.03',
    ip_address='192.168.0.106',
    signal_quality=None,
  )
# ---
# name: test_device_js_devicearray
  Device(
    firmware='H4.01.51MW.2.01W1.0.64(2018-01-251-D)',
    ip_address=None,
    signal_quality=39,
  )
# ---
# name: test_device_js_webdata
  Device(
    firmware='H4.01.38Y1.0.09W1.0.08',
    ip_address='192.168.0.10',
    signal_quality=96,
  )
# ---
# name: test_device_json
  Device(
    firmware='ME-111001-V1.0.6(2015-10-16)',
    ip_address='192.168.0.10',
    signal_quality=None,
  )
# ---
# name: test_device_without_session
  Device(
    firmware='MW_08_512_0501_1.82',
    ip_address='192.168.178.3',
    signal_quality=96,
  )
# ---
# name: test_inverter_html
  Inverter(
    ac_output_current=None,
    ac_output_frequency=None,
    ac_output_power=None,
    ac_output_voltage=None,
    alarm_code='F13',
    dc_input_current=None,
    dc_input_voltage=None,
    firmware='V5.07Build245',
    firmware_slave=None,
    inverter_active=None,
    model='Omnik2500tl',
    serial_number='12345678910',
    solar_current_power=219,
    solar_energy_today=0.23,
    solar_energy_total=6454.5,
    solar_hours_total=None,
    solar_rated_power=2500,
    temperature=None,
  )
# ---
# name: test_inverter_js_devicearray
  Inverter(
    ac_output_current=None,
    ac_output_frequency=None,
    ac_output_power=None,
    ac_output_voltage=None,
    alarm_code=None,
    dc_input_current=None,
    dc_input_voltage=None,
    firmware='V4.08Build215',
    firmware_slave='V4.12Build246',
    inverter_active=None,
    model='Omnik1500tl',
    serial_number='12345678910',
    solar_current_power=850,
    solar_energy_today=2.32,
    solar_energy_total=5200.2,
    solar_hours_total=None,
    solar_rated_power=None,
    temperature=None,
  )
# ---
# name: test_inverter_js_devicearray_sofar2200tl
  Inverter(
    ac_output_current=None,
    ac_output_frequency=None,
    ac_output_power=None,
    ac_output_voltage=None,
    alarm_code=None,
    dc_input_current=None,
    dc_input_voltage=None,
    firmware='V450',
    firmware_slave=None,
    inverter_active=None,
    model='SOFAR2200TL',
    serial_number='1234567890',
    solar_current_power=400,
    solar_energy_today=5.67,
    solar_energy_total=12307.0,
    solar_hours_total=None,
    solar_rated_power=2000,
    temperature=None,
  )
# ---
# name: test_inverter_js_webdata
  Inverter(
    ac_output_current=None,
    ac_output_frequency=None,
    ac_output_power=None,
    ac_output_voltage=None,
    alarm_code='F13',
    dc_input_current=None,
    dc_input_voltage=None,
    firmware='NL2-V9.8-5931',
    firmware_slave='V5.3-00157',
    inverter_active=None,
    model='omnik4000tl2',
    serial_number='12345678910',
    solar_current_power=140,
    solar_energy_today=0.3,
    solar_energy_total=15363.7,
    solar_hours_total=None,
    solar_rated_power=4000,
    temperature=None,
  )
# ---
# name: test_inverter_json
  Inverter(
    ac_output_current=None,
    ac_output_frequency=None,
    ac_output_power=None,
    ac_output_voltage=None,
    alarm_code='F23',
    dc_input_current=None,
    dc_input_voltage=None,
    firmware='V1.25Build23261',
    firmware_slave='V1.40Build52927',
    inverter_active=None,
    model='omnik2000tl2',
    serial_number=None,
    solar_current_power=1225,
    solar_energy_today=10.9,
    solar_energy_total=8674.0,
    solar_hours_total=None,
    solar_rated_power=2000,
    temperature=None,
  )
# ---
# name: test_inverter_without_session
  Inverter(
    ac_output_current=None,
    ac_output_frequency=None,
    ac_output_power=None,
    ac_output_voltage=None,
    alarm_code=None,
    dc_input_current=None,
    dc_input_voltage=None,
    firmware='001F',
    firmware_slave='002F',
    inverter_active=None,
    model='0079',
    serial_number='1234567890ABCDE',
    solar_current_power=5850,
    solar_energy_today=9.8,
    solar_energy_total=44.0,
    solar_hours_total=None,
    solar_rated_power=None,
    temperature=None,
  )
# ---
